syntax = "proto3";

package userservice;

// The User service definition
service UserService {
  // Gets a user by ID
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  
  // Creates a new user
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  
  // Lists all users with pagination
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  
  // Updates an existing user
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  
  // Deletes a user by ID
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  
  // Health check
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

// User message definition
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// Request messages
message GetUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string role = 3;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}

message DeleteUserRequest {
  int32 id = 1;
}

message HealthCheckRequest {
  string service = 1;
}

// Response messages
message GetUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
  string error_code = 4;
}

message CreateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
  string error_code = 4;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  bool success = 5;
  string message = 6;
}

message UpdateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
  string error_code = 4;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
  string error_code = 3;
}

message HealthCheckResponse {
  string status = 1;
  string message = 2;
  int64 timestamp = 3;
}